Move test jpms out of main module-info.java