@@ -21,9 +21,35 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
           <argLine>
-            @{argLine} ${jetty.surefire.argLine} --add-reads org.eclipse.jetty.server=org.eclipse.jetty.logging --add-opens org.eclipse.jetty.server/org.eclipse.jetty.server=ALL-UNNAMED
+            @{argLine} ${jetty.surefire.argLine}
+            --add-reads org.eclipse.jetty.server=org.eclipse.jetty.logging
+            --add-reads org.eclipse.jetty.server=java.xml
+            --add-opens org.eclipse.jetty.server/org.eclipse.jetty.server=ALL-UNNAMED
           </argLine>
         </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>default-testCompile</id>
+            <phase>test-compile</phase>
+            <goals>
+              <goal>testCompile</goal>
+            </goals>
+            <configuration>
+              <compilerArgs>
+                <arg>--add-modules</arg>
+                <arg>java.xml</arg>
+                <arg>--add-reads</arg>
+                <arg>org.eclipse.jetty.server=java.xml</arg>
+                <arg>--add-reads</arg>
+                <arg>org.eclipse.jetty.server=org.eclipse.jetty.server.ssl</arg>
+              </compilerArgs>
+            </configuration>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
